[package]
name = "lessons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
slog = "2.7.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" ] }
slog-term = "2.9.0"
tokio = { version = "1.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
hyper = "0.14.25"
reqwest = "0.11.14"
futures = "0.3"
clap = "2.34.0"
rusqlite = "0.28.0"
actix-web = "3.3.3"
serde_json = "1.0.94"
thiserror = "1.0.39"
anyhow = "1.0.69"
proptest="1.1.0"
slog-async="2.7.0"